# Garbage-Truck-Simulator

./: .gitignore  README.md  main.py  pyproject.toml  truck.py
GTS/: Functions.py
GTS/abstracts/: component.py
GTS/abstracts/animations/: animations.py  path.py  speed.py
GTS/animations/: bezier_path.py  bezier_speed.py  movement_animation.py  moving_point.py  sprite_animation.py
GTS/interface/components/: gauge.py  loading_bar.py  sprite.py
GTS/interface/menus/: game_intro.py  main.py  menu.py  mission_recap.py
GTS/models/: game.py  game_options.py  gts.py  map.py  screen.py  truck.py
GTS/models/components/: car.py  trashcan.py
GTS/models/managers/: car.py  trashcan.py
UI/animations/: image_animation.py
UI/components/: button.py  gauge.py
UI/components/animations/: moving_point.py
UI/menus/: game_intro.py  garage.py  main.py  menu.py
assets/: credits.json  settings.json  settings.pkl
assets/images/animations/chopper/: setup.json
assets/images/animations/explosions/big_explosion/: setup.json
assets/images/animations/explosions/small_explosion/: setup.json
assets/images/animations/flames/: setup.json
assets/images/animations/snare/: setup.json
models/: game.py  game_options.py  gts.py  screen.py
src/: Constants.py  truck.py  utils.py
src/abstracts/: component.py  runnable.py
src/animations/: bezier_path.py  bezier_speed.py  movement_animation.py  sprite_animation.py
