[tool.poetry]
name = "garbage truck simulator"
version = "1.0.0"
description = "A Garbage Truck Simulator"
authors = ["Minigrim0 <grimauflorent@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"
bezier = "^2021.2.12"

[tool.poetry.group.dev.dependencies]
pyproject-flake8 = "^6.0.0.post1"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
